Fix obs IDs, jupyter permissions, documentation

--- a/all_containers/common_files/pheno_meta-data_excel_to_rdf.ipynb
+++ b/all_containers/common_files/pheno_meta-data_excel_to_rdf.ipynb
@@ -76,7 +76,9 @@
     "    g.bind('rdf', rdf)\n",
     "    g.bind('rdfs', rdfs)\n",
     "    g.bind('ppeo', ppeo)\n",
-    "\n",
+    "    \n",
+    "    _, study_ID = filename.split('_')\n",
+    "    study_ID, _ = study_ID.split('.')\n",
     "    fileNode = nodes['datafiles'][filename]\n",
     "    varColumns = list(df.columns)\n",
     "    varColumns.remove('Observation unit ID')\n",
@@ -95,7 +97,8 @@
     "                    continue\n",
     "                #curVar = 1\n",
     "                counter_obs_ID += 1\n",
-    "                obsID_base_string = '#observation/' + nodes['investigation_ID'] + '_' + make_safe(var)\n",
+    "                obsID_base_string = ('#observation/' + nodes['investigation_ID'] + '_' + study_ID + \n",
+    "                                     '_' + make_safe(var))\n",
     "                obsNode = URIRef(obsID_base_string + '_' + str(counter_obs_ID))  # rdflib.BNode() \n",
     "                g.add((\n",
     "                    obsNode,\n",
@@ -172,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "code_folding": [
      0,
@@ -300,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "code_folding": [
      0,
@@ -607,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "code_folding": [
      0,
@@ -681,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "code_folding": [
      0
@@ -727,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {
     "code_folding": [
      0
@@ -820,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {
     "code_folding": [
      0
@@ -935,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {
     "code_folding": [
      0
@@ -1062,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {
     "code_folding": []
    },
@@ -1786,7 +1789,7 @@
     "# df_2003VE.info();\n",
     "# with pd.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can be specified also\n",
     "#    print(df_1999NL)\n",
-    "'ok'\n",
+    "\n",
     "# examining missing values\n",
     "print('Are there any missing values? ', df_2003VE.isnull().values.any())\n",
     "print('Are there any missing values in the Date column? ',df_2003VE['Date'].isnull().values.any())\n",
@@ -2701,7 +2704,7 @@
     "# df_2003VE.info();\n",
     "# with pd.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can be specified also\n",
     "#    print(df_1999NL)\n",
-    "'ok'\n",
+    "\n",
     "# examining missing values\n",
     "print('Are there any missing values? ', df_2010ET.isnull().values.any())\n",
     "print('Are there any missing values in the Date column? ',df_2010ET['Date'].isnull().values.any())\n",
@@ -4540,7 +4543,7 @@
     "df_2004Fin.info();\n",
     "# with pd.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can be specified also\n",
     "#    print(df_2004FinNL)\n",
-    "'ok'\n",
+    "\n",
     "# examining missing values\n",
     "print('Are there any missing values? ', df_2004Fin.isnull().values.any())\n",
     "print('Are there any missing values in the Date column? ',df_2004Fin['Date'].isnull().values.any())\n",
@@ -5407,7 +5410,7 @@
     "df_2005Fin.info();\n",
     "# with pd.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can be specified also\n",
     "#    print(df_2004FinNL)\n",
-    "'ok'\n",
+    "\n",
     "# examining missing values\n",
     "print('Are there any missing values? ', df_2005Fin.isnull().values.any())\n",
     "print('Are there any missing values in the Date column? ',df_2005Fin['Date'].isnull().values.any())\n",
@@ -5425,13 +5428,6 @@
     "#print(g_2004Fin.serialize(format='ttl').decode('utf8'))\n",
     "g.serialize(destination=data_gen + 'data_2005Fin.ttl', format='ttl');"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
